test-policies-fail/deprecated-api-warn/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: deprecated-api-warn
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: ["networking.k8s.io"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["ingresses"]
  validations:
  - expression: "!has(object.metadata.annotations) || !('kubernetes.io/ingress.class' in object.metadata.annotations)"
    messageExpression: "'The kubernetes.io/ingress.class annotation is deprecated. Set spec.ingressClassName: ' + object.metadata.annotations['kubernetes.io/ingress.class'] + ' instead'"
    reason: Invalid
